# STM32

./: .gitignore  CMakeLists.txt  STM32F446RCTX_FLASH.ld  application.ioc  clang-format-all.cmdline  readme.md
Core/Inc/: stm32f4xx_hal_conf.h  stm32f4xx_it.h
Core/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  syscalls.c  system_stm32f4xx.c
Core/application/: adc.cpp  application.cpp  coos.cpp
cmake/: STM32-toolchain.cmake
doc/: readme.txt
doc/optimized-adc/: readme.md
template-project/: .cproject  .mxproject  .project  clang-format-in-realtime.cmdline  readme.md  serial-setup-on-host.txt
template-project/Core/Inc/: main.h
template-project/Core/Src/: sysmem.c
template-project/Core/application/: adc.h  coos.h  erp_decoder.h
